testing matjax again

--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@ When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
 $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 
 </pre>
+
+$X = f \rightarrow E$
 </div>
 </body>
 </html>
